# ct-crypto-lean-applied-extended

./: .gitignore  IMPLEMENTATION_GUIDE_ADVANCED_EXTENSIONS.md  IMPLEMENTATION_GUIDE_BB84.md  IMPLEMENTATION_GUIDE_QKD_EXTENSIONS.md  README.md
RESEARCHER_BUNDLE/: HeytingLean.lean  README_VERIFY.md  lake-manifest.json  lakefile.lean
RESEARCHER_BUNDLE/HeytingLean/Crypto/: Composable.lean  QEC.lean
RESEARCHER_BUNDLE/HeytingLean/Quantum/: QChannel.lean  QState.lean
RESEARCHER_BUNDLE/scripts/: generate_umap.py  verify_ct_crypto.sh
WIP/: CT_WRAP_BUILD_INSTRUCTIONS.md
ct-wrap/: ARCHITECTURE.md  Cargo.toml  README.md  package.json
ct-wrap/circuits/: data_commitment.circom  merkle_membership.circom  range_commitment.circom
ct-wrap/contracts/: CTWrapVerifier.sol
ct-wrap/scripts/: deploy.ts  generate_proof.js  integration_test.sh  qa.sh  setup_circuits.sh
ct-wrap/sdk/python/ctwrap/: client.py
ct-wrap/sdk/typescript/: package.json
ct-wrap/sdk/typescript/src/: index.ts
ct-wrap/src/: lib.rs  main.rs  wrap.rs
ct-wrap/src/api/: mod.rs
ct-wrap/src/crypto/: aes_gcm_siv.rs  kdf.rs  ml_dsa.rs  ml_kem.rs  mod.rs
ct-wrap/src/package/: mod.rs
ct-wrap/src/zk/: mod.rs  prover.rs  verifier.rs
ct-wrap/tests/: circuits.test.js  crypto_tests.rs  integration.test.ts  zk_e2e_test.rs
docs/: 01_Lean_Map.md  02_Proof_Index.md  03_Reproducibility.md  04_Dependencies.md  05_Next_Phase_QKD.md  APPLICATION_FUTURE_RESEARCH_REPORT.md  AUDIT_GAP_REMEDIATION_PLAN.md  TECHNICAL_CLAIMS_FOR_REVIEW.md  TECHNICAL_REPORT.md  TECHNICAL_REPORT_FULL.md
scripts/: qa_dev.sh  test_all.sh
(+52 files in other folders)
