[package]
name = "ct-wrap"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-CT-Crypto-Commercial-or-AGPL"

[dependencies]
# Post-quantum crypto (Kyber/Dilithium -> ML-KEM/ML-DSA parameter mapping)
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Classical crypto + hashing
aes-gcm-siv = "0.11"
rand = "0.8"
sha3 = "0.10"

# Serialization / encoding
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"

# Web/API
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tower_governor = "0.4"

# Hygiene
thiserror = "1.0"
zeroize = "1.7"

[dev-dependencies]
anyhow = "1.0"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"
